<resources>
    <string name="app_name">Android Masterclass</string>
    <string name="title_activity_simple_webview">SimpleWebviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lesson_1_bottom_navigation_bar">Lesson 1: Bottom Navigation Bar</string>
    <string name="lesson_2_dialogs">Lesson 2: Dialogs</string>
    <string name="lesson_6_webviews">Lesson 6: Webviews</string>
    <string name="lesson_3_images">Lesson 3: Images</string>
    <string name="lesson_4_menus">Lesson 4: Menus</string>
    <string name="lesson_4_recycler_views">Lesson 4: Recycler Views</string>
    <string name="simple_recycler_view">Simple recycler view</string>
    <string name="options_menu">Options Menu</string>
    <string name="new_game">New Game</string>
    <string name="help">Help</string>
    <string name="overflow_button">Overflow Button</string>
    <string name="popup_menu">Popup Menu</string>
    <string name="context_menu">Context Menu</string>
    <string name="show_image">Show Image</string>
    <string name="simple_image">Simple Image</string>
    <string name="show_downloaded_image">Show downloaded image</string>
    <string name="show_image_from_url">Show image from URL</string>
    <string name="show_image_using_fresco">Show image using Fresco</string>
    <string name="title_activity_example_custom_view">CustomViewActivity</string>
    <string name="lesson_2_activity">Lesson 2: Activity</string>
    <string name="lesson_3_fragments">Lesson 3: Fragments</string>
    <string name="lesson_4_custom_views">Lesson 4: Custom Views</string>
    <string name="title_activity_example_with_fragment">ActivityWithFragment</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="counter">Counter</string>
    <string name="fragment_welcome_text">I am being shown in a fragment</string>
    <string name="the_content_below_me_is_being_rendered_in_a_fragment">The content below me is being rendered in a fragment</string>
    <string name="firebase_auth">Firebase Auth</string>
    <string name="module_5">Module 5</string>
    <string name="module_2">Module 2</string>
    <string name="module_1">Module 1</string>
    <string name="module_5_title">Module 5</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email_password_auth">Email/Password Auth</string>
    <string name="email_password_login">Email password login</string>
    <string name="email_password_sign_up">Email password sign up</string>
    <string name="enter_email_id">Enter email ID</string>
    <string name="enter_password">Enter password</string>
    <string name="firebase_ui">Firebase UI</string>
    <string name="write_test_data">Write test data</string>
    <string name="read_test_data">Read test data</string>
    <string name="firebase_realtime_db">Firebase Realtime Database</string>
    <string name="firebase_storage">Firebase Storage</string>
    <string name="firebase_cloud_messaging">Firebase Cloud Messaging</string>
    <string name="upload_in_memory_data">Upload in memory data</string>
    <string name="download_file_from_storage">Download file from storage</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Educative</string>
    <string name="fcm_message" translatable="true">New remote notification</string>
    <string name="send_remote_notification">Send remote notification</string>
    <string name="retrofit">Retrofit</string>
    <string name="get_cat_facts">GET Cat Facts</string>
    <string name="module_9">Module 9</string>
    <string name="view_models">View Models</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="live_data">Live Data</string>
    <string name="lifecycle_aware_components">Lifecycle aware components</string>
    <string name="second_activity">Second activity!</string>
    <string name="intent_examples">Intent examples</string>
    <string name="launch_second_activity">Launch second activity</string>
    <string name="intents">Intents</string>
    <string name="module_3">Module 3</string>
    <string name="share_content">Share content</string>
    <string name="received_url">Received URL</string>
    <string name="receive_content">Receive content</string>
    <string name="send_broadcast">Send broadcast</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="send_local_broadcast">Send local broadcast</string>
    <string name="processes_and_threads">Processes and threads</string>
    <string name="service_and_workers">Service and Workers</string>
    <string name="runtime_permissions">Runtime permissions</string>
    <string name="fetch_user_location">User location</string>
    <string name="manifest_permissions">Manifest permissions</string>
    <string name="kotlin_coroutines">Kotlin coroutines</string>
    <string name="singleton_classes">Singleton classes</string>
    <string name="module_10">Module 10</string>
    <string name="hilt_basic_example">Hilt basic example</string>
    <string name="hilt_module_example">Hilt Module example</string>
</resources>