<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <Button
        android:id="@+id/explicit_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/launch_second_activity" />

    <Button
        android:id="@+id/implicit_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/share_content" />

    <Button
        android:id="@+id/implicit_intent_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/receive_content" />
</LinearLayout>